--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ html {
     border: 1px solid #000000;
     border-radius: 4px;
     color: gray;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.266);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.266);
 }
 
 
 input:hover {
-    box-shadow: 0 0 1em black;
+    box-shadow: 0 0 5px black;
 
 }
 
@@ -96,7 +96,6 @@ button:hover {
     background-size: cover;
     background-position: cover;
     filter: blur(2px);
-
     background-repeat: no-repeat;
 
 }
@@ -115,12 +114,12 @@ button:hover {
     display: block;
     max-width: 300px;
     width: 100%;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 25px rgb(255, 255, 255);
+    box-shadow: 0 0 5px rgb(236, 236, 236);
     font-weight: 600;
-    border: solid black;
+    border: solid rgb(87, 87, 87);
    
    
 }
@@ -131,8 +130,7 @@ button:hover {
     width: 100%;
     background-color: #fff;
     padding: 20px;
-    /* border-radius: 8px;
-    box-shadow: 0 0 25px rgba(5, 5, 5, 1); */
+
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-width: thin;
